# rag-pipeline-test

./: .env.example  .gitignore  README.md  app.py  farmer-rag-mvp-guide.md  pyproject.toml
scripts/: inspect_stage1_v2.py  inspect_stages.py
src/: config.py  models.py
src/api/: main.py
src/api/static/: index.html
src/cleaners/: pipeline.py
src/generator/: prompts.py  rag.py
src/parsers/: compilation_splitter.py  docling_parser.py  docx_block_parser.py  parser.py  router.py  shape_detector.py
src/pipeline/: ingest.py
src/retriever/: context.py  hybrid.py
src/splitters/: breadcrumb.py  chunk_splitter.py  metadata.py  quality.py  section_splitter.py
src/vectorstore/: chroma_store.py
src/vlm/: client.py  prompts.py
tests/: test_cleaners.py  test_compilation_splitter.py  test_docx_block_parser.py  test_manual_parser.py  test_splitters.py
tests/fixtures/: internal_rules_sample.docx  manual_vol1_sample.docx  sample.md
